--- a/source/less/contacts.less
+++ b/source/less/contacts.less
@@ -59,7 +59,7 @@
 
     &:active {
       color: #d2f0eb;
-      border-color: #d2f0eb;
+      text-decoration-color: #d2f0eb;
     }
   }
 }
@@ -107,6 +107,7 @@
 .contacts .contacts__map iframe {
   width: 100%;
   height: 100%;
+  border: none;
 }
 
 /*tablet-version*/
