--- a/source/less/form-main.less
+++ b/source/less/form-main.less
@@ -2,17 +2,15 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  width: 320px;
   margin: 0 auto;
   background-color: @white;
 }
 
 .form .form__heading {
   display: block;
-  text-align: center;
-  margin: 0;
+  width: 100%;
   padding: 68px 0 75px;
-  letter-spacing: 1px;
+  text-align: center;
   background-color: #f1f1f1;
 }
 
@@ -21,7 +19,6 @@
   text-align: left;
   margin: 0 auto;
   padding: 23px 30px;
-  letter-spacing: 0.4px;
   font-size: 13px;
 }
 
@@ -42,11 +39,9 @@
 
   .form .form__heading {
     position: relative;
-    width: 768px;
     font-size: 43px;
     line-height: 50px;
-    padding: 95px 0 85px;
-    letter-spacing: 1.7px;
+    padding: 94px 0 87px;
 
     &::after {
       position: absolute;
@@ -62,7 +57,7 @@
   }
 
   .form .form__description {
-    padding: 68px 100px 10px 50px;
+    padding: 65px 100px 7px 50px;
     font-size: 17px;
     line-height: 30px;
   }
@@ -84,22 +79,21 @@
   }
 
   .form .form__heading {
-    width: 1150px;
     font-size: 53px;
     line-height: 57px;
-    letter-spacing: 1.5px;
     padding: 95px 0 105px;
-    margin-bottom: 125px;
+    margin-bottom: 121px;
 
     &::after {
       height: 20px;
-      background-size: 100% 20px;
+      background-size: 100% 30px;
     }
   }
 
   .form .form__description {
     width: 1150px;
-    padding: 115px 240px 0 225px;
+    padding: 0 240px 0 225px;
+    margin-bottom: 5px;
     font-size: 17px;
     line-height: 30px;
   }
