--- a/source/less/reviews.less
+++ b/source/less/reviews.less
@@ -66,23 +66,7 @@
 .reviews__controls .reviews__skip {
   text-align: center;
   width: 129px;
-
-  &:hover,
-  &:focus {
-    & svg {
-      fill: @light-black;
-    }
-  }
-
-  &:active {
-    & svg {
-      fill: gray;
-    }
-  }
-}
-
-.reviews__skip svg {
-  fill: @black;
+  padding-top: 3px;
 }
 
 .reviews__skip--left {
