--- a/source/less/catalog.less
+++ b/source/less/catalog.less
@@ -9,7 +9,7 @@
 /*tablet-version*/
 @media (min-width: 768px) {
   .catalog {
-    margin-top: 24px;
+    margin-top: 20px;
     margin-bottom: 50px;
   }
 }
@@ -20,6 +20,7 @@
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-between;
+    width: 1150px;
     padding: 0 50px;
     margin: 0 auto;
   }
