--- a/source/less/item-card.less
+++ b/source/less/item-card.less
@@ -33,7 +33,8 @@
   padding: 20px 28px 5px;
   margin: 0;
   font-weight: bold;
-  letter-spacing: 0.7px;
+  color: @light-black;
+  text-decoration: none;
 
   &:hover,
   &:focus {
@@ -46,21 +47,20 @@
 }
 
 .item-card__info .item-card__desc {
-  padding: 0 0 18px;
+  padding: 0 0 20px;
   margin: 0 28px;
   font-size: 13px;
   line-height: 30px;
-  color: @light-black;
+  color: #a8a8a8;
 }
 
 .item-card__info .item-card__buy {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  padding: 22px 0 25px;
-  margin: 0 28px;
+  padding: 20px 0 27px;
+  margin: 0 25px 0 28px;
   border-top: 1px solid @gray;
-  letter-spacing: 0.7px;
 }
 
 .item-card__buy .item-card__buy--price {
@@ -73,11 +73,6 @@
 .item-card__buy .item-card__buy--icon {
   width: 25px;
   height: 25px;
-  background-image: url("../img/icon-cart.svg");
-  background-position: center center;
-  background-repeat: no-repeat;
-  color: @black;
-  opacity: 0.5;
 }
 
 /*tablet-version*/
@@ -86,7 +81,7 @@
   .item-card {
     flex-direction: row;
     width: 668px;
-    margin: 51px auto 0;
+    margin: 52px auto 0;
     text-align: left;
     border: 1px solid @gray;
   }
@@ -94,7 +89,6 @@
   .item-card .item-card__img {
     width: 334px;
     height: 334px;
-    margin-bottom: -7px;
   }
 
   .item-card .item-card__info {
@@ -102,20 +96,19 @@
   }
 
   .item-card .item-card__heading {
-    padding: 25px 70px 8px 28px;
+    padding: 25px 70px 5px 28px;
     font-size: 20px;
-    letter-spacing: 1.2px;
   }
 
   .item-card__info .item-card__desc {
     margin-bottom: auto;
+    font-size: 15px;
   }
 
   .item-card__info .item-card__buy {
-    padding: 25px 5px;
+    padding: 23px 3px 27px;
     margin: 0 28px;
     font-size: 17px;
-    letter-spacing: 1.5px;
   }
 
   .item-card__buy .item-card__buy--price {
@@ -129,9 +122,10 @@
   .item-card {
     flex-direction: column;
     flex-wrap: nowrap;
+    justify-content: flex-start;
     width: auto;
     margin: 0;
-    margin-bottom: 60px;
+    margin-bottom: 58px;
   }
 
   .item-card .item-card__img {
@@ -141,16 +135,21 @@
 
   .item-card .item-card__info {
     width: 315px;
+    flex-grow: 1;
   }
 
   .item-card .item-card__heading {
-    padding: 25px 35px 8px 28px;
+    padding: 26px 50px 8px 26px;
+  }
+
+  .item-card__info .item-card__desc {
+    padding: 0 26px 20px;
+    margin: 0 0 auto;
   }
 
   .item-card__info .item-card__buy {
-    padding: 19px 0 20px;
-    margin: 0 28px;
+    padding: 17px 0 23px;
+    margin: 0 30px 0 26px;
     font-size: 17px;
-    letter-spacing: 1.5px;
   }
 }
