--- a/source/less/blank.less
+++ b/source/less/blank.less
@@ -399,7 +399,12 @@
 /*desktop-version*/
 
 @media (min-width: 1150px) {
+  .blank {
+    width: 1150px;
+  }
+
   .blank .blank__section {
+    width: 100%;
     padding: 50px 225px 25px;
   }
 
