--- a/source/less/process.less
+++ b/source/less/process.less
@@ -188,7 +188,8 @@
   }
 
   .process .process__heading {
-    padding: 78px 25px 32px 60px;
+    width: 298px;
+    padding: 78px 40px 32px 60px;
     letter-spacing: 0;
   }
 
@@ -199,6 +200,7 @@
 
   .process .process__description {
     padding: 0 0 48px 60px;
+    width: 298px;
   }
 
   .process .process__button--buy {
