--- a/source/less/blank.less
+++ b/source/less/blank.less
@@ -357,6 +357,20 @@
   .blank .blank__order {
     width: 230px;
     margin: 0 0 0 50px;
+    padding: 16px 0;
+    letter-spacing: 0;
+    font-size: 17px;
+    line-height: 16px;
+
+    &:hover,
+    &:focus {
+      color: @white;
+      background-color: @light-black;
+    }
+
+    &:active {
+      color: @gray;
+    }
   }
 }
 
