--- a/source/less/short-info.less
+++ b/source/less/short-info.less
@@ -19,7 +19,7 @@
   flex-direction: column;
   justify-content: flex-start;
   padding: 0;
-  margin: 0 auto;
+  margin: 0 auto 3px;
   color: @black;
   list-style: none;
   text-align: left;
@@ -28,15 +28,15 @@
 .short-info .short-info__item {
   position: relative;
   width: 260px;
-  padding-top: 80px;
+  padding-top: 83px;
   font-weight: bold;
   line-height: 20px;
 }
 
 .short-info .short-info__item svg {
   position: absolute;
-  left: 0;
-  top: 25px;
+  left: 5px;
+  top: 30px;
 }
 
 /*tablet-version*/
