--- a/source/less/features.less
+++ b/source/less/features.less
@@ -3,6 +3,7 @@
   background-color: #f9f9f9;
   background-image: url("../img/hero-mobile@1x.webp"), url("../img/hero-mobile@1x.jpg");
   background-position: center -20px;
+  background-repeat: no-repeat;
   z-index: -1;
 
   @media (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
